--- a/Главная.css
+++ b/Главная.css
@@ -147,7 +147,11 @@
 
 @media (max-width: 575px) {
   .u-section-2 .u-group-1 {
-    width: 340px;
+    margin-top: 129px;
+    min-height: 266px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -158,7 +162,7 @@
   .u-section-2 .u-text-1 {
     font-size: 1.5rem;
     width: 320px;
-    margin-top: 93px;
+    margin-top: 28px;
   }
 
   .u-section-2 .u-text-2 {
