--- a/Главная.css
+++ b/Главная.css
@@ -3,43 +3,74 @@
 }
 
 .u-section-1 .u-group-elements-1 {
-  width: 387px;
-  min-height: 166px;
-  height: auto;
+  width: 296px;
+  min-height: 158px;
   transition-duration: 0.5s;
+  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
   box-shadow: rgba(var(---r),var(---g),var(---b),0);
   text-shadow: rgba(var(---r),var(---g),var(---b),0);
-  transform: translateX(0px) translateY(0px) scale(1) rotate(0deg);
-  margin: 362px auto 60px;
+  margin: 179px auto 0;
 }
 
 .u-section-1 .u-text-1 {
-  font-size: 3.125rem;
+  font-size: 2.25rem;
   font-weight: 700;
-  margin: 0 0 0 153px;
-}
-
-.u-section-1 .u-text-2 {
-  font-size: 1.375rem;
-  font-weight: 600;
-  margin: 12px 16px 0 143px;
+  width: auto;
+  margin: 23px 0 0 126px;
 }
 
 .u-section-1 .u-icon-1 {
   width: 158px;
   height: 158px;
-  margin: -149px auto 0 0;
+  margin: -101px auto 0 0;
   padding: 0;
+}
+
+.u-section-1 .u-text-2 {
+  font-size: 1.375rem;
+  font-weight: 600;
+  width: auto;
+  margin: -56px 0 0 126px;
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-group-elements-1 {
-    width: 340px;
+    margin-bottom: 60px;
   }
+}
 
-  .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-  }
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]),
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]):before,
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, image-zoom, background-size, background-position;
+}
+
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]).u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]).u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]):hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+  box-shadow: rgba(var(---r),var(---g),var(---b),0) !important;
+  text-shadow: rgba(var(---r),var(---g),var(---b),0) !important;
+}
+
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]) {
+  border-color: transparent !important;
+}
+
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]).u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]).u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]).hover {
+  transform: scale(1.1) translateX(0px) translateY(0px) !important;
+  box-shadow: rgba(var(---r),var(---g),var(---b),0) !important;
+  text-shadow: rgba(var(---r),var(---g),var(---b),0) !important;
+}
+
+.u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]) {
+  border-color: transparent !important;
+}
+
+.u-container-layout:hover .u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]) {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
+}
+
+.u-container-layout.hover .u-block-45d4-6:not([data-block-selected]):not([data-cell-selected]) {
+  transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
 }
 
 .u-section-1 .u-group-elements-1,
